static/style.css
html, body {
    background-color: #161616;
    overflow: hidden;
    height: 100%;
    margin: 0;
    padding: 0;
}

body{
    display:flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap:20px;
}

h1{
    color: #FFF;
    text-align: center;
    font-size: 4.5em;
    margin-bottom: 20px;
}

/*button*/

.btn a {
    text-decoration: none; 
    color: #FFF; 
    font-size: 1.5rem;
    font-weight: bold;
}

.btn {
    padding: 15px 60px;
    border: none;
    outline: none;
    color: #FFF;
    cursor: pointer;
    position: relative;
    z-index: 0;
    border-radius: 12px;
}
.btn::after {
    content: "";
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #333;
    left: 0;
    top: 0;
    border-radius: 10px;
}

.btn::before {
    content: "";
    background: linear-gradient(
        45deg,
        #FF0000, #FF7300, #FFFB00, #48FF00,
        #00FFD5, #002BFF, #FF00C8, #FF0000
);
    position : absolute;
    top: -2px;
    left: -2px;
    background-size: 600%;
    z-index: -1;
    width: calc(100% + 4px);
    height: calc(100% + 4px);
    filter: blur(8px);
    animation: glowing 20s linear infinite;
    transition: opacity .3s ease-in-out;
    border-radius: 10px;
    opacity: 1;
}

@keyframes glowing {
    0% {background-position: 0 0;}
    50% {background-position: 400% 0;}
    100% {background-position: 0 0;}
}

.btn:hover::before{
    opacity: 1;
}

.btn:active:after {
    background: transparent;
}

.btn:active {
    color: #000;
    font-weight: bold;
}

